--- a/todomvc/index.html
+++ b/todomvc/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-cn">
 <head>
   <meta charset="UTF-8">
-  <title>todomvc</title>
+  <title>Redux TodoMVC example</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root" class="todoapp"></div>
   <script src="/static/bundle.js"></script>
 </body>
 </html>
